# nlp_practice

./: .gitignore  main.py  pos_tagging.ipynb  project_quora.ipynb  pyproject.toml  text_classification.ipynb  text_preprocessing.ipynb  word2vec_pretrained.ipynb  word2vec_selftrained.ipynb
