[project]
name = "nlp-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "emoji>=2.15.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "textblob>=0.19.0",
]
