[project]
name = "nlp-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "emoji>=2.15.0",
    "gensim>=4.4.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "textblob>=0.19.0",
    "xgboost>=3.2.0",
]
